--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -1148,6 +1148,14 @@
         <td class="image"><a href="naslovna/karakalpacki.jpg" target="_blank"><img src="naslovna_th/karakalpacki.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/karakalpacki.jpg" target="_blank"><img src="prva_th/karakalpacki.jpg" width="50px"></a></td>
       </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Karakalpački jezk</td>
+        <td><a href="https://en.wikipedia.org/wiki/Karakalpak_language" target="_blank">Karakalpak language</a></td>
+        <td>Kishkene Shahzada </td>
+        <td class="image"><a href="naslovna/karakalpacki_latinica.jpg" target="_blank"><img src="naslovna_th/karakalpacki_latinica.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/karakalpacki_latinica.jpg" target="_blank"><img src="prva_th/karakalpacki_latinica.jpg" width="50px"></a></td>
+      </tr>
        <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Karenski jezik</td>
