--- a/index.html
+++ b/index.html
@@ -492,6 +492,14 @@
         <td class="image"><a href="naslovna/alzaskialemanski.jpg" target="_blank"><img src="naslovna_th/alzaskialemanski.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/alzaskialemanski.jpg" target="_blank"><img src="prva_th/alzaskialemanski.jpg" width="50px"></a></td>
       </tr>
+       <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Amharski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Amharic" target="_blank">Amharic language</a></td>
+        <td>ትንሹ ልዑል</td>
+        <td class="image"><a href="naslovna/amharski.jpg" target="_blank"><img src="naslovna_th/amharski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/amharski.jpg" target="_blank"><img src="prva_th/amharski.jpg" width="50px"></a></td>
+      </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Arapski jezik</td>
