--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -1662,6 +1662,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Rapanujski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Rapa_Nui_language" target="_blank">Rapa Nui language</a></td>
+        <td>Te poki 'iti-'iti o te 'Ariki</td>
+        <td class="image"><a href="naslovna/rapanui.jpg" target="_blank"><img src="naslovna_th/rapanui.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/rapanui.jpg" target="_blank"><img src="prva_th/rapanui.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Rimski dijalekt</td>
         <td><a href="https://en.wikipedia.org/wiki/Romanesco_dialect" target="_blank">Romanesco dialect</a></td>
         <td>Er Principetto</td>
