--- a/index.html
+++ b/index.html
@@ -1214,6 +1214,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Kaškajski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Qashqai_language" target="_blank">Qashqai language</a></td>
+        <td>Kumbuca Paşa</td>
+        <td class="image"><a href="naslovna/kaskajski.jpg" target="_blank"><img src="naslovna_th/kaskajski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/kaskajski.jpg" target="_blank"><img src="prva_th/kaskajski.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Kazaški jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Kazakh_language" target="_blank">Kazakh language</a></td>
         <td>Кішкентай ханзада</td>
