--- a/index.html
+++ b/index.html
@@ -548,6 +548,14 @@
         <td class="image"><a href="naslovna/azerski.jpg" target="_blank"><img src="naslovna_th/azerski.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/azerski.jpg" target="_blank"><img src="prva_th/azerski.jpg" width="50px"></a></td>
       </tr>
+       <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Bambara jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Bambara_language" target="_blank">Bambara language</a></td>
+        <td>Masadennin</td>
+        <td class="image"><a href="naslovna/bambara.jpg" target="_blank"><img src="naslovna_th/bambara.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/bambara.jpg" target="_blank"><img src="prva_th/bambara.jpg" width="50px"></a></td>
+      </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Banatsko bugarski dijalekt</td>
