--- a/index.html
+++ b/index.html
@@ -1278,6 +1278,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Kineski Minan Hokien</td>
+        <td><a href="https://en.wikipedia.org/wiki/Hokkien" target="_blank">Chinese Minnan Hokkien</a></td>
+        <td>Ginna Qngchu</td>
+        <td class="image"><a href="naslovna/kineski-minan_hokinan.jpg" target="_blank"><img src="naslovna_th/kineski-minan_hokinan.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/kineski-minan_hokinan.jpg" target="_blank"><img src="prva_th/kineski-minan_hokinan.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Kirgiski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Kyrgyz_language" target="_blank">Kyrgyz language</a></td>
         <td>Кичинекей Ханзада</td>
