--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -1220,6 +1220,14 @@
         <td class="image"><a href="naslovna/kineski.jpg" target="_blank"><img src="naslovna_th/kineski.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/kineski.jpg" target="_blank"><img src="prva_th/kineski.jpg" width="50px"></a></td>
       </tr>
+       <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Kineski Minan Hokien</td>
+        <td><a href="https://en.wikipedia.org/wiki/Hokkien" target="_blank">Chinese Minnan Hokkien</a></td>
+        <td>Ginna Qngchu</td>
+        <td class="image"><a href="naslovna/kineski-minan_hokinan.jpg" target="_blank"><img src="naslovna_th/kineski-minan_hokinan.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/kineski-minan_hokinan.jpg" target="_blank"><img src="prva_th/kineski-minan_hokinan.jpg" width="50px"></a></td>
+      </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Kirgiski jezik</td>
