--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -582,6 +582,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Bosanski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Bosnian_language" target="_blank">Bosnian language</a></td>
+        <td>Mali princ</td>
+        <td class="image"><a href="naslovna/bosanski-strip.jpg" target="_blank"><img src="naslovna_th/bosanski-strip.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/bosanski-strip.jpg" target="_blank"><img src="prva_th/bosanski-strip.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Brazilski portugalski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Brazilian_Portuguese" target="_blank">Brazilian Portuguese language</a></td>
         <td>O Pequeno Príncipe </td>
