--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -510,6 +510,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Asamski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Assamese_language" target="_blank">Assamese language</a></td>
+        <td>এখুদ ৰাজকুমাৰ</td>
+        <td class="image"><a href="naslovna/asamski.jpg" target="_blank"><img src="naslovna_th/asamski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/asamski.jpg" target="_blank"><img src="prva_th/asamski.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Asturijski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Asturian_language" target="_blank">Asturian language</a></td>
         <td>El Principin</td>
