--- a/index.html
+++ b/index.html
@@ -572,6 +572,14 @@
         <td class="image"><a href="naslovna/azerski.jpg" target="_blank"><img src="naslovna_th/azerski.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/azerski.jpg" target="_blank"><img src="prva_th/azerski.jpg" width="50px"></a></td>
       </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Balinežanski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Balinese_language" target="_blank">Balinese language</a></td>
+        <td>Raja Cenik | ᬭᬵᬚᬘᭂᬦᬶᬓ᭄</td>
+        <td class="image"><a href="naslovna/balinezanski.jpg" target="_blank"><img src="naslovna_th/balinezanski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/balinezanski.jpg" target="_blank"><img src="prva_th/balinezanski.jpg" width="50px"></a></td>
+      </tr>
        <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Bambara jezik</td>
