--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -1318,6 +1318,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Kmerski Surin jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Northern_Khmer_dialect" target="_blank">Northern Khmer language</a></td>
+        <td></td>
+        <td class="image"><a href="naslovna/kmerski-surin.jpg" target="_blank"><img src="naslovna_th/kmerski-surin.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/kmerski-surin.jpg" target="_blank"><img src="prva_th/kmerski-surin.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Korejski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Korean_language" target="_blank">Korean language</a></td>
         <td>어린 왕자</td>
