--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -1556,6 +1556,14 @@
         <td class="image"><a href="naslovna/napolitanski.jpg" target="_blank"><img src="naslovna_th/napolitanski.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/napolitanski.jpg" target="_blank"><img src="prva_th/napolitanski.jpg" width="50px"></a></td>
       </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Navat (Pipil) jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Nawat_language" target="_blank">Nawat (Pipil) language</a></td>
+        <td>Ne Kunetatuktianizin</td>
+        <td class="image"><a href="naslovna/naavat.jpg" target="_blank"><img src="naslovna_th/naavat.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/naavat.jpg" target="_blank"><img src="prva_th/naavat.jpg" width="50px"></a></td>
+      </tr>
        <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Navatl ili Astečki jezik</td>
