--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -1766,6 +1766,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Romanš - surselvanski dijalekt</td>
+        <td><a href="https://en.wikipedia.org/wiki/Sursilvan" target="_blank">Romansh sursilvan</a></td>
+        <td>Il prenci Pignet</td>
+        <td class="image"><a href="naslovna/romans-surselvanski.jpg" target="_blank"><img src="naslovna_th/romans-surselvanski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/romans-surselvanski.jpg" target="_blank"><img src="prva_th/romans-surselvanski.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Romanjolski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Romagnol_dialects" target="_blank">Romagnol language</a></td>
         <td>E' prinzipì</td>
