--- a/index.html
+++ b/index.html
@@ -1808,7 +1808,7 @@
         <td class="number"><span class="auto"></span></td>
         <td>Romanš - surmiranski dijalekt</td>
         <td><a href="https://en.wikipedia.org/wiki/Surmiran_dialect" target="_blank">Romansh surmiran</a></td>
-        <td>Il prenci Pignet</td>
+        <td>Igl Pitschen Prenzi</td>
         <td class="image"><a href="naslovna/romans-surmiranski.jpg" target="_blank"><img src="naslovna_th/romans-surmiranski.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/romans-surmiranski.jpg" target="_blank"><img src="prva_th/romans-surmiranski.jpg" width="50px"></a></td>
       </tr>
