--- a/index.html
+++ b/index.html
@@ -1816,9 +1816,17 @@
         <td class="number"><span class="auto"></span></td>
         <td>Romanš - surselvanski dijalekt</td>
         <td><a href="https://en.wikipedia.org/wiki/Sursilvan" target="_blank">Romansh sursilvan</a></td>
-        <td>Il prenci Pignet</td>
+        <td>Il Prenci Pignet</td>
         <td class="image"><a href="naslovna/romans-surselvanski.jpg" target="_blank"><img src="naslovna_th/romans-surselvanski.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/romans-surselvanski.jpg" target="_blank"><img src="prva_th/romans-surselvanski.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Romanš - valader dijalekt</td>
+        <td><a href="https://en.wikipedia.org/wiki/Vallader_dialect" target="_blank">Romansh vallader</a></td>
+        <td>Il Pitschen Prinzi</td>
+        <td class="image"><a href="naslovna/romans-valader.jpg" target="_blank"><img src="naslovna_th/romans-valader.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/romans-valader.jpg" target="_blank"><img src="prva_th/romans-valader.jpg" width="50px"></a></td>
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
