--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -1782,6 +1782,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Romanš - valader dijalekt</td>
+        <td><a href="https://en.wikipedia.org/wiki/Vallader_dialect" target="_blank">Romansh vallader</a></td>
+        <td>Il Pitschen Prinzi</td>
+        <td class="image"><a href="naslovna/romans-valader.jpg" target="_blank"><img src="naslovna_th/romans-valader.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/romans-valader.jpg" target="_blank"><img src="prva_th/romans-valader.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Romanjolski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Romagnol_dialects" target="_blank">Romagnol language</a></td>
         <td>E' prinzipì</td>
