--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -1534,6 +1534,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Mokša jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Moksha_language" target="_blank">Moksha language</a></td>
+        <td>Ëмла оцязорня</td>
+        <td class="image"><a href="naslovna/moksa.jpg" target="_blank"><img src="naslovna_th/moksa.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/moksa.jpg" target="_blank"><img src="prva_th/moksa.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Moliški dijalekt</td>
         <td><a href="https://en.wikipedia.org/wiki/Slavomolisano_dialect" target="_blank">Molise dialect</a></td>
         <td>Ru Prengeparielle</td>
