--- a/index.html
+++ b/index.html
@@ -2028,13 +2028,13 @@
         <td class="image"><a href="naslovna/spansko-argentinski.jpg" target="_blank"><img src="naslovna_th/spansko-argentinski.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/spansko-argentinski.jpg" target="_blank"><img src="prva_th/spansko-argentinski.jpg" width="50px"></a></td>
       </tr>
-      <tr>
+     <tr>
         <td class="number"><span class="auto"></span></td>
-        <td>Španski, Madridski dijalekt</td>
-        <td><a href="https://en.wikipedia.org/wiki/Spanish_dialects_and_varieties" target="_blank">Spanish, Madrid dialects</a></td>
+        <td>Španski Madridski dijalekt jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Spanish_dialects_and_varieties" target="_blank">Spanish Madrid dialect</a></td>
         <td>El chaval principeras</td>
-        <td class="image"><a href="naslovna/spanski-madridski_dijalect.jpg" target="_blank"><img src="naslovna_th/spanski-madridski_dijalect.jpg" width="50px"></a></td>
-        <td class="image"><a href="prva/spanski-madridski_dijalect.jpg" target="_blank"><img src="prva_th/spanski-madridski_dijalect.jpg" width="50px"></a></td>
+        <td class="image"><a href="naslovna/spanski-madridski_dijalekt.jpg" target="_blank"><img src="naslovna_th/spanski-madridski_dijalekt.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/spanski-madridski_dijalekt.jpg" target="_blank"><img src="prva_th/spanski-madridski_dijalekt.jpg" width="50px"></a></td>
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
