--- a/index.html
+++ b/index.html
@@ -2030,7 +2030,7 @@
       </tr>
      <tr>
         <td class="number"><span class="auto"></span></td>
-        <td>Španski Madridski dijalekt jezik</td>
+        <td>Španski Madridski dijalekt</td>
         <td><a href="https://en.wikipedia.org/wiki/Spanish_dialects_and_varieties" target="_blank">Spanish Madrid dialect</a></td>
         <td>El chaval principeras</td>
         <td class="image"><a href="naslovna/spanski-madridski_dijalekt.jpg" target="_blank"><img src="naslovna_th/spanski-madridski_dijalekt.jpg" width="50px"></a></td>
