--- a/index.html
+++ b/index.html
@@ -2046,8 +2046,8 @@
       </tr>
      <tr>
         <td class="number"><span class="auto"></span></td>
-        <td>Španski Madridski dijalekt</td>
-        <td><a href="https://en.wikipedia.org/wiki/Spanish_dialects_and_varieties" target="_blank">Spanish Madrid dialect</a></td>
+        <td>Španski Čeli, Madridski sleng</td>
+        <td><a href="https://en.wikipedia.org/wiki/Cheli" target="_blank">Spanish Cheli, Madrid slang</a></td>
         <td>El chaval principeras</td>
         <td class="image"><a href="naslovna/spanski-madridski_dijalekt.jpg" target="_blank"><img src="naslovna_th/spanski-madridski_dijalekt.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/spanski-madridski_dijalekt.jpg" target="_blank"><img src="prva_th/spanski-madridski_dijalekt.jpg" width="50px"></a></td>
