--- a/index.html
+++ b/index.html
@@ -966,6 +966,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Gotski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Gothic_language" target="_blank">Gothic language</a></td>
+        <td>Sa Leitila Frauja</td>
+        <td class="image"><a href="naslovna/gotski.jpg" target="_blank"><img src="naslovna_th/gotski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/gotski.jpg" target="_blank"><img src="prva_th/gotski.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Grčki jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Greek_language" target="_blank">Greek language</a></td>
         <td>Ο μικρός πρίγκιπας</td>
