--- a/index.html
+++ b/index.html
@@ -518,8 +518,8 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
-        <td>Albanski jezik</td>
-        <td><a href="https://en.wikipedia.org/wiki/Albanian_language" target="_blank">Albanian language</a></td>
+        <td>Albanski, Toskijski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Albanian_language" target="_blank">Albanian (Tosk) language</a></td>
         <td>Princi i Vogël</td>
         <td class="image"><a href="naslovna/albanski.jpg" target="_blank"><img src="naslovna_th/albanski.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/albanski.jpg" target="_blank"><img src="prva_th/albanski.jpg" width="50px"></a></td>
