--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -476,10 +476,10 @@
         <td class="image"><a href="naslovna/aymara.jpg" target="_blank"><img src="naslovna_th/aymara.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/aymara.jpg" target="_blank"><img src="prva_th/aymara.jpg" width="50px"></a></td>
       </tr>
-      <tr>
+       <tr>
         <td class="number"><span class="auto"></span></td>
-        <td>Albanski jezik</td>
-        <td><a href="https://en.wikipedia.org/wiki/Albanian_language" target="_blank">Albanian language</a></td>
+        <td>Albanski, Toskijski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Albanian_language" target="_blank">Albanian (Tosk) language</a></td>
         <td>Princi i Vogël</td>
         <td class="image"><a href="naslovna/albanski.jpg" target="_blank"><img src="naslovna_th/albanski.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/albanski.jpg" target="_blank"><img src="prva_th/albanski.jpg" width="50px"></a></td>
