--- a/index.html
+++ b/index.html
@@ -2372,6 +2372,14 @@
         <td class="image"><a href="naslovna/zapotecki.jpg" target="_blank"><img src="naslovna_th/zapotecki.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/zapotecki.jpg" target="_blank"><img src="prva_th/zapotecki.jpg" width="50px"></a></td>
       </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Zazaki, Kirdki jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Zaza_language" target="_blank">Zazaki, Kirdki language</a></td>
+        <td>Prensa Qij</td>
+        <td class="image"><a href="naslovna/zazaki-kirdki.jpg" target="_blank"><img src="naslovna_th/zazaki-kirdki.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/zazaki-kirdki.jpg" target="_blank"><img src="prva_th/zazaki-kirdki.jpg" width="50px"></a></td>
+      </tr>
 
 <!--
       <tr>
