--- a/index.html
+++ b/index.html
@@ -2268,6 +2268,14 @@
         <td class="image"><a href="naslovna/turski-kiparski.jpg" target="_blank"><img src="naslovna_th/turski-kiparski.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/turski-kiparski.jpg" target="_blank"><img src="prva_th/turski-kiparski.jpg" width="50px"></a></td>
       </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Turski u boji</td>
+        <td><a href="https://en.wikipedia.org/wiki/Turkish_language" target="_blank">Turkish color alphabet</a></td>
+        <td>Küçük prens</td>
+        <td class="image"><a href="naslovna/turski-kolor.jpg" target="_blank"><img src="naslovna_th/turski-kolor.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/turski-kolor.jpg" target="_blank"><img src="prva_th/turski-kolor.jpg" width="50px"></a></td>
+      </tr>
        <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Udegejski jezik</td>
