--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -2230,6 +2230,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Turski u boji</td>
+        <td><a href="https://en.wikipedia.org/wiki/Turkish_language" target="_blank">Turkish color alphabet</a></td>
+        <td>Küçük prens</td>
+        <td class="image"><a href="naslovna/turski-kolor.jpg" target="_blank"><img src="naslovna_th/turski-kolor.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/turski-kolor.jpg" target="_blank"><img src="prva_th/turski-kolor.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Udegejski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Udege_language" target="_blank">Udege language</a></td>
         <td>Ница принцэ</td>
