--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -1310,6 +1310,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Katalonski, Majorkan dijalekt</td>
+        <td><a href="https://en.wikipedia.org/wiki/Balearic_Catalan" target="_blank">Catalan Majorcan</a></td>
+        <td>Es petit príncep</td>
+        <td class="image"><a href="naslovna/katalonski-majorkan.jpg" target="_blank"><img src="naslovna_th/katalonski-majorkan.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/katalonski-majorkan.jpg" target="_blank"><img src="prva_th/katalonski-majorkan.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Kečua jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Quechuan_languages" target="_blank">Quechuan language</a></td>
         <td>Quyllur Llaqtayuq Wawawanta</td>
