--- a/index.html
+++ b/index.html
@@ -1556,6 +1556,14 @@
         <td class="image"><a href="naslovna/majanskikakcikel.jpg" target="_blank"><img src="naslovna_th/majanskikakcikel.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/majanskikakcikel.jpg" target="_blank"><img src="prva_th/majanskikakcikel.jpg" width="50px"></a></td>
       </tr>
+       <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Majanski Kiče</td>
+        <td><a href="https://en.wikipedia.org/wiki/K%CA%BCiche%CA%BC_language" target="_blank">Mayan Kʼicheʼ</a></td>
+        <td>Tz'ib'atal Rumal</td>
+        <td class="image"><a href="naslovna/majanski-kice.jpg" target="_blank"><img src="naslovna_th/majanski-kice.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/majanski-kice.jpg" target="_blank"><img src="prva_th/majanski-kice.jpg" width="50px"></a></td>
+      </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Majanski Tojolabal</td>
