--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -1166,6 +1166,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Italijanski, Fijumanski dijalekt</td>
+        <td><a href="https://en.wikipedia.org/wiki/Fiuman_dialect" target="_blank">Italian, Fiuman dialect</a></td>
+        <td>El picio principe</td>
+        <td class="image"><a href="naslovna/italijanski-fijumanski.jpg" target="_blank"><img src="naslovna_th/italijanski-fijumanski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/italijanski-fijumanski.jpg" target="_blank"><img src="prva_th/italijanski-fijumanski.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Italijanski, Kasino dijalekt</td>
         <td><a href="https://en.wikipedia.org/wiki/Cassino" target="_blank">Italian, Cassinese dialect</a></td>
         <td>Gliu Princ'p Picc'rigl</td>
