--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -1190,6 +1190,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Italijanski, Leonski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Leonese_language" target="_blank">Italian Leonese language</a></td>
+        <td>Lu Principinu</td>
+        <td class="image"><a href="naslovna/italijanski-leonski.jpg" target="_blank"><img src="naslovna_th/italijanski-leonski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/italijanski-leonski.jpg" target="_blank"><img src="prva_th/italijanski-leonski.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Italijanski, Milanski dijalekt</td>
         <td><a href="https://en.wikipedia.org/wiki/Milanese_dialect" target="_blank">Italian, Milanese dialect</a></td>
         <td>El princip Piscinin</td>
