--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -908,6 +908,14 @@
         <td class="image"><a href="naslovna/starofrancuski.jpg" target="_blank"><img src="naslovna_th/starofrancuski.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/starofrancuski.jpg" target="_blank"><img src="prva_th/starofrancuski.jpg" width="50px"></a></td>
       </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Francuski Konte</td>
+        <td><a href="https://en.wikipedia.org/wiki/Frainc-Comtou" target="_blank">Frainc-Comtou</a></td>
+        <td>Lou Péquignot Prïnce</td>
+        <td class="image"><a href="naslovna/francuski-konte.jpg" target="_blank"><img src="naslovna_th/francuski-konte.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/francuski-konte.jpg" target="_blank"><img src="prva_th/francuski-konte.jpg" width="50px"></a></td>
+      </tr>
        <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Frankoprovansalski jezik, dijalekt kantona Fribur/Frajburg</td>
