--- a/index.html
+++ b/index.html
@@ -2374,6 +2374,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Velški jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Welsh_language" target="_blank">Welsh language</a></td>
+        <td>Y Tywysog Bach</td>
+        <td class="image"><a href="naslovna/velski.jpg" target="_blank"><img src="naslovna_th/velski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/velski.jpg" target="_blank"><img src="prva_th/velski.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Venecijanski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Venetian_language" target="_blank">Venetian Lower Veronese language</a></td>
         <td>El Principe Butin</td>
