--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -478,6 +478,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Afrikans jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Afrikaans" target="_blank">Afrikaans language</a></td>
+        <td>Die Klein Prinsie</td>
+        <td class="image"><a href="naslovna/afrikans.jpg" target="_blank"><img src="naslovna_th/afrikans.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/afrikans.jpg" target="_blank"><img src="prva_th/afrikans.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Ajmara jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Aymara_language" target="_blank">Aymara language</a></td>
         <td>Pirinsipi Wawa</td>
