--- a/index.html
+++ b/index.html
@@ -2134,6 +2134,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Španski Gaceria sleng</td>
+        <td><a href="https://en.wikipedia.org/wiki/Gacer%C3%ADa" target="_blank">Spanish Gaceria slang</a></td>
+        <td>El pitoche engrullón</td>
+        <td class="image"><a href="naslovna/spanski-gaceria_sleng.jpg" target="_blank"><img src="naslovna_th/spanski-gaceria_sleng.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/spanski-gaceria_sleng.jpg" target="_blank"><img src="prva_th/spanski-gaceria_sleng.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Švedski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Swedish_language" target="_blank">Swedish language</a></td>
         <td>Lille prinsen</td>
