--- a/index.html
+++ b/index.html
@@ -1734,6 +1734,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Nemački jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/German_language" target="_blank">German language</a></td>
+        <td>Der kleine Prinz</td>
+        <td class="image"><a href="naslovna/nemacki_mini.jpg" target="_blank"><img src="naslovna_th/nemacki_mini.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/nemacki_mini.jpg" target="_blank"><img src="prva_th/nemacki_mini.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Nemački jezik (novi prevod)</td>
         <td><a href="https://en.wikipedia.org/wiki/German_language" target="_blank">German language</a></td>
         <td>Der kleine Prinz</td>
