--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -348,6 +348,14 @@
         <td class="image"><a href="naslovna/srpski-cirilica_globosina.jpg" target="_blank"><img src="naslovna_th/srpski-cirilica_globosina.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/srpski-cirilica_globosina.jpg" target="_blank"><img src="prva_th/srpski-cirilica_globosina.jpg" width="50px"></a></td>
       </tr>
+       <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Srpski ćirilica</td>
+        <td><a href="https://en.wikipedia.org/wiki/Serbian_Cyrillic_alphabet" target="_blank">Serbian Cyrillic</a></td>
+        <td>Мали принц</td>
+        <td class="image"><a href="naslovna/srpski-cirilica_skolskaknjiga.jpg" target="_blank"><img src="naslovna_th/srpski-cirilica_skolskaknjiga.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/srpski-cirilica_skolskaknjiga.jpg" target="_blank"><img src="prva_th/srpski-cirilica_skolskaknjiga.jpg" width="50px"></a></td>
+      </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Srpski ćirilica</td>
