--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -1862,6 +1862,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Puti jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Phuthi_language#cite_note-3" target="_blank">Phuthi language</a></td>
+        <td>Likhosana</td>
+        <td class="image"><a href="naslovna/puti.jpg" target="_blank"><img src="naslovna_th/puti.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/puti.jpg" target="_blank"><img src="prva_th/puti.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Radžastani jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Rajasthani_language" target="_blank">Rajasthani language</a></td>
         <td>नैनो राजकंवर</td>
