--- a/index.html
+++ b/index.html
@@ -1094,6 +1094,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Gvarani jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Guarani_language" target="_blank">Guarani language</a></td>
+        <td>Principe'i</td>
+        <td class="image"><a href="naslovna/gvarani2.jpg" target="_blank"><img src="naslovna_th/gvarani2.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/gvarani2.jpg" target="_blank"><img src="prva_th/gvarani2.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Hantec sleng</td>
         <td><a href="https://en.wikipedia.org/wiki/Hantec_slang" target="_blank">Hantec slang</a></td>
         <td>Malé principál</td>
