--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -1398,6 +1398,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Kinjaruanda</td>
+        <td><a href="https://en.wikipedia.org/wiki/Kinyarwanda" target="_blank">Kinyarwanda</a></td>
+        <td>Igikomangoma Gito</td>
+        <td class="image"><a href="naslovna/kinjaruanda.jpg" target="_blank"><img src="naslovna_th/kinjaruanda.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/kinjaruanda.jpg" target="_blank"><img src="prva_th/kinjaruanda.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Kirgiski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Kyrgyz_language" target="_blank">Kyrgyz language</a></td>
         <td>Кичинекей Ханзада</td>
