--- a/index.html
+++ b/index.html
@@ -1270,6 +1270,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Italijanski, Mačerata dijalekt</td>
+        <td><a href="https://en.wikipedia.org/wiki/Central_Marchigiano_dialect#Macerata_dialect" target="_blank">Macerata dialect</a></td>
+        <td>Lu Pringipittu</td>
+        <td class="image"><a href="naslovna/italijanski-macerata_dijalekt.jpg" target="_blank"><img src="naslovna_th/italijanski-macerata_dijalekt.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/italijanski-macerata_dijalekt.jpg" target="_blank"><img src="prva_th/italijanski-macerata_dijalekt.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Italijanski, Milanski dijalekt</td>
         <td><a href="https://en.wikipedia.org/wiki/Milanese_dialect" target="_blank">Italian, Milanese dialect</a></td>
         <td>El princip Piscinin</td>
