--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -1228,6 +1228,14 @@
         <td class="image"><a href="naslovna/italijanski-leonski.jpg" target="_blank"><img src="naslovna_th/italijanski-leonski.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/italijanski-leonski.jpg" target="_blank"><img src="prva_th/italijanski-leonski.jpg" width="50px"></a></td>
       </tr>
+       <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Italijanski, Mačerata dijalekt</td>
+        <td><a href="https://en.wikipedia.org/wiki/Central_Marchigiano_dialect#Macerata_dialect" target="_blank">Macerata dialect</a></td>
+        <td>Lu Pringipittu</td>
+        <td class="image"><a href="naslovna/italijanski-macerata_dijalekt.jpg" target="_blank"><img src="naslovna_th/italijanski-macerata_dijalekt.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/italijanski-macerata_dijalekt.jpg" target="_blank"><img src="prva_th/italijanski-macerata_dijalekt.jpg" width="50px"></a></td>
+      </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Italijanski, Milanski dijalekt</td>
