--- a/index.html
+++ b/index.html
@@ -2452,6 +2452,14 @@
         <td class="image"><a href="naslovna/verona.jpg" target="_blank"><img src="naslovna_th/verona.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/verona.jpg" target="_blank"><img src="prva_th/verona.jpg" width="50px"></a></td>
       </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Vincentski kreolski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Vincentian_Creole" target="_blank">Vincentian Creole language</a></td>
+        <td>I liklo prins</td>
+        <td class="image"><a href="naslovna/vincentski-kreolski.jpg" target="_blank"><img src="naslovna_th/vincentski-kreolski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/vincentski-kreolski.jpg" target="_blank"><img src="prva_th/vincentski-kreolski.jpg" width="50px"></a></td>
+      </tr>
        <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Vijetnamski jezik</td>
