--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -2414,6 +2414,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Vincentski kreolski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Vincentian_Creole" target="_blank">Vincentian Creole language</a></td>
+        <td>I liklo prins</td>
+        <td class="image"><a href="naslovna/vincentski-kreolski.jpg" target="_blank"><img src="naslovna_th/vincentski-kreolski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/vincentski-kreolski.jpg" target="_blank"><img src="prva_th/vincentski-kreolski.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Vijetnamski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Vietnamese_language" target="_blank">Vietnamese language</a></td>
         <td>Chú bé Hoàng Tử</td>
