--- a/index.html
+++ b/index.html
@@ -534,6 +534,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Ainu ili ainski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Ainu_language" target="_blank">Ainu language</a></td>
+        <td>ponnociwkorkur</td>
+        <td class="image"><a href="naslovna/ainu.jpg" target="_blank"><img src="naslovna_th/ainu.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/ainu.jpg" target="_blank"><img src="prva_th/ainu.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Ajmara jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Aymara_language" target="_blank">Aymara language</a></td>
         <td>Pirinsipi Wawa</td>
