--- a/index.html
+++ b/index.html
@@ -1012,6 +1012,14 @@
         <td class="image"><a href="naslovna/filipinski-tagalog.jpg" target="_blank"><img src="naslovna_th/filipinski-tagalog.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/filipinski-tagalog.jpg" target="_blank"><img src="prva_th/filipinski-tagalog.jpg" width="50px"></a></td>
       </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Futunski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Futunan_language" target="_blank">Futunan language</a></td>
+        <td>Ko Le Gā Tama Sau </td>
+        <td class="image"><a href="naslovna/futunski.jpg" target="_blank"><img src="naslovna_th/futunski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/futunski.jpg" target="_blank"><img src="prva_th/futunski.jpg" width="50px"></a></td>
+      </tr>
        <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Galicijski jezik</td>
