--- a/index.html
+++ b/index.html
@@ -1702,6 +1702,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Mansijski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Mansi_language" target="_blank">Mansi language</a></td>
+        <td>MāнЬ хōнкве</td>
+        <td class="image"><a href="naslovna/mansijski.jpg" target="_blank"><img src="naslovna_th/mansijski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/mansijski.jpg" target="_blank"><img src="prva_th/mansijski.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Mapuče jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Mapuche_language" target="_blank">Mapuche language</a></td>
         <td>Chi Pichi Ülmen</td>
