--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -1660,6 +1660,14 @@
         <td class="image"><a href="naslovna/malteski.jpg" target="_blank"><img src="naslovna_th/malteski.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/malteski.jpg" target="_blank"><img src="prva_th/malteski.jpg" width="50px"></a></td>
       </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Mansijski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Mansi_language" target="_blank">Mansi language</a></td>
+        <td>MāнЬ хōнкве</td>
+        <td class="image"><a href="naslovna/mansijski.jpg" target="_blank"><img src="naslovna_th/mansijski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/mansijski.jpg" target="_blank"><img src="prva_th/mansijski.jpg" width="50px"></a></td>
+      </tr>
        <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Mapuče jezik</td>
