--- a/index.html
+++ b/index.html
@@ -1846,6 +1846,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Norveški jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Norwegian_language" target="_blank">Norwegian language</a></td>
+        <td>Den lille prinsen</td>
+        <td class="image"><a href="naslovna/norveski.jpg" target="_blank"><img src="naslovna_th/norveski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/norveski.jpg" target="_blank"><img src="prva_th/norveski.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Odžibva jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Ojibwe_language" target="_blank">Ojibwe language</a></td>
         <td>Ogimaans</td>
