--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -1270,6 +1270,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Italijanski, Tršćanski dijalekt</td>
+        <td><a href="https://en.wikipedia.org/wiki/Triestine_dialect" target="_blank">Italian, Triestine dialect</a></td>
+        <td>El Picio Principe</td>
+        <td class="image"><a href="naslovna/italijanski-trst.jpg" target="_blank"><img src="naslovna_th/italijanski-trst.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/italijanski-trst.jpg" target="_blank"><img src="prva_th/italijanski-trst.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Jakutski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Yakut_language" target="_blank">Yakut language</a></td>
         <td>Кыра тыгын</td>
