--- a/index.html
+++ b/index.html
@@ -736,9 +736,17 @@
         <td class="number"><span class="auto"></span></td>
         <td>Brazilski portugalski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Brazilian_Portuguese" target="_blank">Brazilian Portuguese language</a></td>
-        <td>O Pequeno Príncipe </td>
+        <td>O Pequeno Príncipe</td>
         <td class="image"><a href="naslovna/brazil-portugalski.jpg" target="_blank"><img src="naslovna_th/brazil-portugalski.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/brazil-portugalski.jpg" target="_blank"><img src="prva_th/brazil-portugalski.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Bretonski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Breton_language" target="_blank">Breton language</a></td>
+        <td>Ar Priñs Bihan</td>
+        <td class="image"><a href="naslovna/bretonski.jpg" target="_blank"><img src="naslovna_th/bretonski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/bretonski.jpg" target="_blank"><img src="prva_th/bretonski.jpg" width="50px"></a></td>
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
