--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -700,7 +700,15 @@
         <td class="image"><a href="naslovna/brazil-portugalski.jpg" target="_blank"><img src="naslovna_th/brazil-portugalski.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/brazil-portugalski.jpg" target="_blank"><img src="prva_th/brazil-portugalski.jpg" width="50px"></a></td>
       </tr>
-        <tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Bretonski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Breton_language" target="_blank">Breton language</a></td>
+        <td>Ar Priñs Bihan</td>
+        <td class="image"><a href="naslovna/bretonski.jpg" target="_blank"><img src="naslovna_th/bretonski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/bretonski.jpg" target="_blank"><img src="prva_th/bretonski.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Bribri jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Bribri_language" target="_blank">Bribri language</a></td>
