--- a/index.html
+++ b/index.html
@@ -1342,6 +1342,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Javanski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Javanese_language" target="_blank">Javanese language</a></td>
+        <td>Pangeran Alit</td>
+        <td class="image"><a href="naslovna/javanski.jpg" target="_blank"><img src="naslovna_th/javanski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/javanski.jpg" target="_blank"><img src="prva_th/javanski.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Jermenski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Armenian_language" target="_blank">Armenian language</a></td>
         <td>Փոքրիկ_իշխանը</td>
