--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -1300,7 +1300,15 @@
         <td class="image"><a href="naslovna/japanski.jpg" target="_blank"><img src="naslovna_th/japanski.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/japanski.jpg" target="_blank"><img src="prva_th/japanski.jpg" width="50px"></a></td>
       </tr>
-       <tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Javanski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Javanese_language" target="_blank">Javanese language</a></td>
+        <td>Pangeran Alit</td>
+        <td class="image"><a href="naslovna/javanski.jpg" target="_blank"><img src="naslovna_th/javanski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/javanski.jpg" target="_blank"><img src="prva_th/javanski.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Jermenski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Armenian_language" target="_blank">Armenian language</a></td>
