--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -1852,6 +1852,14 @@
         <td class="image"><a href="naslovna/aranski.jpg" target="_blank"><img src="naslovna_th/aranski.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/aranski.jpg" target="_blank"><img src="prva_th/aranski.jpg" width="50px"></a></td>
       </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Oksitanski Nozerinski jezil</td>
+        <td><a href="https://en.wikipedia.org/wiki/Occitan_language" target="_blank">Occitan of the Croissant marchois nouzerinois</a></td>
+        <td>Le P'chot Prince</td>
+        <td class="image"><a href="naslovna/oksitanski-nozerin.jpg" target="_blank"><img src="naslovna_th/oksitanski-nozerin.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/oksitanski-nozerin.jpg" target="_blank"><img src="prva_th/oksitanski-nozerin.jpg" width="50px"></a></td>
+      </tr>
        <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Oksitanski Provansalski jezik</td>
