--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -1142,6 +1142,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Hrvatski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Croatian_language" target="_blank">Croatian language</a></td>
+        <td>Mali princ</td>
+        <td class="image"><a href="naslovna/hrvatski3.jpg" target="_blank"><img src="naslovna_th/hrvatski3.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/hrvatski3.jpg" target="_blank"><img src="prva_th/hrvatski3.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Hrvatski, Čakavsko narečje</td>
         <td><a href="https://en.wikipedia.org/wiki/Chakavian" target="_blank">Chakavian</a></td>
         <td>Mići Princ</td>
