--- a/index.html
+++ b/index.html
@@ -1902,7 +1902,7 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
-        <td>Oksitanski Nozerinski jezil</td>
+        <td>Oksitanski Nozerinski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Occitan_language" target="_blank">Occitan of the Croissant marchois nouzerinois</a></td>
         <td>Le P'chot Prince</td>
         <td class="image"><a href="naslovna/oksitanski-nozerin.jpg" target="_blank"><img src="naslovna_th/oksitanski-nozerin.jpg" width="50px"></a></td>
