--- a/index.html
+++ b/index.html
@@ -1326,6 +1326,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Italijanski, Tičino dijalekt</td>
+        <td><a href="https://en.wikipedia.org/wiki/Ticinese_dialect" target="_blank">Italian, Ticinese dialect</a></td>
+        <td>Ul principe pinin</td>
+        <td class="image"><a href="naslovna/italijanski-ticino.jpg" target="_blank"><img src="naslovna_th/italijanski-ticino.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/italijanski-ticino.jpg" target="_blank"><img src="prva_th/italijanski-ticino.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Italijanski, Tršćanski dijalekt</td>
         <td><a href="https://en.wikipedia.org/wiki/Triestine_dialect" target="_blank">Italian, Triestine dialect</a></td>
         <td>El Picio Principe</td>
