--- a/index.html
+++ b/index.html
@@ -2460,6 +2460,14 @@
         <td class="image"><a href="naslovna/turski-kolor.jpg" target="_blank"><img src="naslovna_th/turski-kolor.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/turski-kolor.jpg" target="_blank"><img src="prva_th/turski-kolor.jpg" width="50px"></a></td>
       </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Tuvinski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Tuvan_language" target="_blank">Tuvan language</a></td>
+        <td>Бичии Тажьі</td>
+        <td class="image"><a href="naslovna/tuvinski.jpg" target="_blank"><img src="naslovna_th/tuvinski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/tuvinski.jpg" target="_blank"><img src="prva_th/tuvinski.jpg" width="50px"></a></td>
+      </tr>
        <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Udegejski jezik</td>
