--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -2422,6 +2422,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Tuvinski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Tuvan_language" target="_blank">Tuvan language</a></td>
+        <td>Бичии Тажьі</td>
+        <td class="image"><a href="naslovna/tuvinski.jpg" target="_blank"><img src="naslovna_th/tuvinski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/tuvinski.jpg" target="_blank"><img src="prva_th/tuvinski.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Udegejski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Udege_language" target="_blank">Udege language</a></td>
         <td>Ница принцэ</td>
