--- a/index.html
+++ b/index.html
@@ -820,6 +820,14 @@
         <td class="image"><a href="naslovna/cecenski.jpg" target="_blank"><img src="naslovna_th/cecenski.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/cecenski.jpg" target="_blank"><img src="prva_th/cecenski.jpg" width="50px"></a></td>
       </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Čedžu jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Jeju_language" target="_blank">Jeju language</a></td>
+        <td></td>
+        <td class="image"><a href="naslovna/cedzu.jpg" target="_blank"><img src="naslovna_th/cedzu.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/cedzu.jpg" target="_blank"><img src="prva_th/cedzu.jpg" width="50px"></a></td>
+      </tr>
        <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Češki jezik</td>
